--- a/src/components/SidebarComponents/RecBox.css
+++ b/src/components/SidebarComponents/RecBox.css
@@ -1,8 +1,17 @@
 .box {
-    width: 100%;
-    height: 50px;
-    background-color: antiquewhite;
+    height: 80px;
+    background-color: rgb(245, 245, 245);
     border: 2px solid black;
-    margin: 10px;
-    margin-right: 10px;
+    border-radius: 5px ;
+    margin-bottom: 20px;
+}
+
+.boxTick {
+    height: 80px;
+    background-color: rgb(245, 245, 245);
+    border: 2px solid black;
+    border-radius: 5px ;
+    margin-bottom: 20px;
+    padding-top: 16px;
+    padding-left: 10px
 }
