--- a/src/components/SidebarComponents/Title1Comp.css
+++ b/src/components/SidebarComponents/Title1Comp.css
@@ -1,4 +1,21 @@
 .tit1 {
     display: flex;
     justify-content: space-between;
+    /* border: 1px solid black; */
+    padding-top :10px ;
+    padding-bottom: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
+
+.title1 {
+    font-size: xx-large;
+    font-weight: 600;
+}
+
+.boxx {
+    padding: 15px;
+    border-radius: 5px;
+    padding-left: 250px;
+}
+
