--- a/src/App.css
+++ b/src/App.css
@@ -21,8 +21,8 @@
 
 .main-container{
   width: 70%;
-  background-color: aqua;
-  border: 1px solid black;
+  /* background-color: aqua; */
+  /* border: 1px solid black; */
   margin: 15px;
   border-radius: 5px;
 }
