--- a/src/components/MainComponents/MainComp.css
+++ b/src/components/MainComponents/MainComp.css
@@ -56,5 +56,5 @@
     width: 45%;
     border: 1px solid black;
     border-radius: 10px;
-    /* background-color: rgb(217, 217, 217); */
+    background-color: rgb(217, 217, 217);
 }
