--- a/src/components/MainComponents/MainComp.css
+++ b/src/components/MainComponents/MainComp.css
@@ -48,7 +48,7 @@
     width: 50%;
     border: 1px solid black;
     border-radius: 10px;
-    /* background-color: rgb(217, 217, 217); */
+    background-color: rgb(217, 217, 217);
 }
 
 .div2-div2{
