--- a/src/components/MainComponents/Title2.css
+++ b/src/components/MainComponents/Title2.css
@@ -5,3 +5,12 @@
     margin-bottom: 12px;
 }
 
+.title2-mainComp{
+    background-color: rgb(217, 217, 217);
+}
+
+/* .tit2-headcomp{
+    display: flex;
+    gap: 20px;
+} */
+
