--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,34 @@
-* {
+/* App.css */
+body {
+  font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  background-color: #f9f9f9;
 }
 
-
-.top-container{
+.app-container {
   display: flex;
-  height: 100vh;
-  /* background-color: crimson; */
+  height: 100vh; 
 }
 
-.sidebar{
-  width: 30%;;
-  background-color: rgb(217, 217, 217);
-  border: 1px solid black;
-  margin: 15px;
-  border-radius: 10px;
+/* .main-content {
+
+  flex: 1;
+  padding: 20px;
+} */
+.main-content-wrapper {
+  display: flex;
+  flex-direction: column;
+  width: 70%; 
+  height: 100%;
 }
 
-.main-container{
-  width: 70%;
-  /* background-color: aqua; */
-  /* border: 1px solid black; */
-  margin: 15px;
-  border-radius: 5px;
+.header {
+  flex-basis: 15%; 
+}
+
+.main-content {
+  flex-basis: 80%; 
+  overflow-y: auto; 
+  padding: 20px; 
 }
