--- a/src/components/ProgressCard.css
+++ b/src/components/ProgressCard.css
@@ -1,7 +1,7 @@
+/* ProgressCard.css */
 .OneCard {
     height: 80%;
     width: 180px;
-    /* background-color: red; */
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -13,6 +13,9 @@
     width: 100%;
     border-radius: 20px;
     background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .topic {
@@ -20,4 +23,23 @@
     width: 90%;
     background-color: black;
     border-radius: 20px;
+}
+
+
+.box-container {
+    display: flex;
+    flex-wrap: wrap;         
+    gap: 5px;                
+    padding: 10px;           
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+.small-box {
+    width: 20px;            
+    height: 20px;            
+    background-color: pink;  
+    border-radius: 4px;      
 }
