--- a/src/components/CardPlaceholder.css
+++ b/src/components/CardPlaceholder.css
@@ -1,9 +1,30 @@
 /* CardPlaceholder.css */
 .card-placeholder {
     background-color: #ccc;
-    width: 80%;
-    height: 60px;
+    height: 50%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
     margin-bottom: 10px;
     border-radius: 4px;
   }
+
+.card-pla-topic{
+  border: 1px solid black;
+  width: 100%;
+  height: 100%;
+}
+
+.goals-box{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.goal-box {
+  width: 30px;            
+  height: 30px;            
+  background-color: pink;  
+  border-radius: 100px;  
+  border: 1px solid black;    
+}
   
