--- a/src/components/MainContent.css
+++ b/src/components/MainContent.css
@@ -50,6 +50,7 @@
   justify-content: space-between;
   width: 100%;
   height: 100%;
+  gap:20px;
 }
 
 .main-content-column-2 {
@@ -58,6 +59,8 @@
 
 .main-content-column-3 {
   width: 50%;
+  /* background-color: yellow; */
+  border-radius: 8px;
 }
 
 
