--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -1,13 +1,18 @@
 /* Sidebar.css */
 .sidebar {
     width: 30%;
-    background-color: #e0e0e0;
+    background-color: yellow;
     padding: 20px;
   }
   .sidebar-Title {
     display: flex;
     justify-content: space-between;
     margin-bottom: 20px;
+  }
+
+  .sidebar-Title1{
+    display: flex;
+    align-items: center;
   }
   .sidebar-header {
     display: flex;
@@ -26,4 +31,11 @@
   .sidebar-settings {
     font-size: 20px;
   }
-  
+  .input-box{
+    width: 60%;
+  }
+ .boxx {
+  border-radius: 10px;
+  padding: 10px;
+  width: 100%;
+ }
