--- a/src/components/MainContent.css
+++ b/src/components/MainContent.css
@@ -62,5 +62,9 @@
   /* background-color: yellow; */
   border-radius: 8px;
 }
-
+.Title4-section{
+  display:flex;
+  flex-direction: column;
+  background-color: yellow;
+}
 
