--- a/src/components/CardGrid.css
+++ b/src/components/CardGrid.css
@@ -3,7 +3,16 @@
     background-color: yellow;
     height: 100%;
     display: flex;
+    /* flex-direction: column; */
     justify-content: space-between;
     align-items: center;
   }
+/* 
+.card-grid{
+  display: flex;
+  flex-direction: column;
+}
+
+.cards{
   
+} */
