--- a/src/components/CardPlaceholder.css
+++ b/src/components/CardPlaceholder.css
@@ -1,6 +1,6 @@
 /* CardPlaceholder.css */
 .card-placeholder {
-    background-color: #ccc;
+    background-color: white;
     height: 50%;
     width: 100%;
     display: flex;
