--- a/src/components/PracticeCard.css
+++ b/src/components/PracticeCard.css
@@ -1,5 +1,5 @@
 .practiceCard {
-  background-color: rgb(224, 68, 16);
+  background-color: white;
   padding: 8px;
   border-radius: 8px;
   display: flex;
