--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -3,6 +3,8 @@
     width: 30%;
     background-color: yellow;
     padding: 20px;
+    margin-bottom: 20px;
+    border-radius: 10px;
   }
   .sidebar-Title {
     display: flex;
@@ -38,4 +40,8 @@
   border-radius: 10px;
   padding: 10px;
   width: 100%;
+ }
+
+ .tasklist-section{
+  overflow: auto;
  }
