--- a/src/components/TaskList.css
+++ b/src/components/TaskList.css
@@ -1,5 +1,9 @@
 /* TaskList.css */
-
+.main-Tasklist{
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 50px;
+}
 .taskList {
   /* margin-bottom: 50px; */
   /* height: 50px; */
