--- a/src/components/ProgressCard.css
+++ b/src/components/ProgressCard.css
@@ -21,7 +21,7 @@
 .topic {
     height: 15%;
     width: 90%;
-    background-color: black;
+    background-color: white;
     border-radius: 20px;
 }
 
