--- a/src/components/PracticeCard.css
+++ b/src/components/PracticeCard.css
@@ -1,36 +1,43 @@
 .practiceCard {
-  background-color: white;
-  padding: 8px;
-  border-radius: 8px;
-  display: flex;
-  /* margin: 10px; */
-  /* flex-direction: column; */
-  justify-content: space-around;
-  /* align-items: center; */
-  height: 50%;
-  width: 100%;
-}
-
-.practiceCard-child{
-    border: 2px solid black;
-    height: 100%;
+    background-color: white;
+    padding: 8px;
     border-radius: 8px;
-}
-
-#videoimage {
-    width: 40%;
-}
-
+    display: flex;
+    justify-content: space-around;
+    height: 50%;
+    width: 100%;
+  }
+  
+.practiceCard-child {
+    border: 2px solid black;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+  }
+  
 #videolink {
     width: 50%;
 }
-
-.practiceCard-child {
-    display: flex;
-    flex-direction: column;
+  
+.videoimage {
+    width: 40%;
+    position: relative; /* Make it the positioning context */
+    overflow: hidden;
+    border-radius: 8px;
 }
 
-.pCard{
+/* Apply scaling to fit the entire thumbnail without cropping */
+.video-iframe {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 110%; /* Slightly larger than the container width */
+    height: 110%; /* Slightly larger than the container height */
+    transform: translate(-50%, -50%) scale(0.9); /* Centers and scales down */
+    transform-origin: center;
+}
+  
+.pCard {
     border: 1px solid black;
     width: 100%;
     height: 100%;
@@ -38,11 +45,16 @@
 
 .buttons {
     display: flex;
-    gap:10px;
+    gap: 10px;
 }
 
 .button {
     border: 1px solid black;
     width: 100%;
     height: 100%;
+}
+
+.btn {
+    height: 100%;
+    width: 100%;
 }
